# CHATWITHREPO

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: loader.py  repo_handler.py  splitter.py  vector_store.py
config/: settings.py
src/generation/: chat_engine.py
src/indexing/: vector_store.py
src/ingestion/: file_filters.py  github_client.py
src/parsing/: ast_chunker.py  generic_chunker.py  parser_factory.py
